snapshots/syntax/library/statements/file_copy/filecopy_with_expressions.snap
---
source: src/syntax/library/statements/file_copy.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: FileCopyStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: FileCopyKeyword
                  text: FileCopy
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: App
                - kind: PeriodOperator
                  text: "."
                - kind: Identifier
                  text: Path
                - kind: Whitespace
                  text: " "
                - kind: Ampersand
                  text: "&"
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"\\\\data.dat\""
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"C:\\\\Backup\\\\data.dat\""
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
